//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Clubs {
  id String [pk]
  clubLink String [not null]
  clubId String [unique, not null]
  clubName String [not null]
  founderId String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  founder users
}

Table Package {
  id String [pk]
  packageName String [not null]
  features String[] [not null]
  monthlyRate Float [not null]
  yearlyRate Float [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
}

Table Faq {
  id String [pk]
  question String [not null]
  answer String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Feedbacks {
  id String [pk]
  experience String
  difficultProcess String
  rating Rating [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Survey {
  id String [pk]
  marketing Marketing [not null]
  userId String [unique, not null]
  user users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table payments {
  id String [pk]
  email String [not null]
  subSessionId String [not null]
  amount Float [not null]
  xenditReferenceId String [not null]
  xenditPayoutId String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  status PaymentStatusEnum [not null]
  subsession subSession [not null]
  user users [not null]
}

Table bank {
  id String [pk]
  channelCode String [not null]
  channelType ChannelType [not null]
  bankName String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
}

Table sessions {
  id String [pk]
  name String [not null]
  location String [not null]
  sessionDate String [not null]
  sessionTime String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  subSession subSession [not null]
  status RecordStatus [not null, default: 'ACTIVE']
  createdBy String
}

Table subSession {
  id String [pk]
  sessionType SesssionType [not null]
  coach String [not null]
  noofTeams Int [not null]
  maxPlayers Int [not null]
  maxperTeam Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  sessionId String [not null]
  sessions sessions [not null]
  teams teams [not null]
  users users [not null]
  rates rates [not null]
  status RecordStatus [not null, default: 'ACTIVE']
  createdBy String
  payments payments [not null]
}

Table teams {
  id String [pk]
  teamName String [not null]
  color String [not null]
  subSessionId String [not null]
  subSession subSession [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  players String[] [not null]
  users users [not null]
  status RecordStatus [not null, default: 'ACTIVE']
}

Table rates {
  id String [pk]
  packageName String [not null]
  cashRate Float [not null]
  onlineRate Float [not null]
  sessionCount Int [not null]
  description String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  status RecordStatus [not null, default: 'ACTIVE']
  subSession subSession [not null]
  subSessionId String [not null]
}

Table users {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String
  phone String [not null]
  profilePic String
  link String
  age Int
  address String
  dateofbirth DateTime
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  gender Gender
  type UserTypeEnum [not null]
  clubs Clubs [not null]
  joinedLobbyId String
  subSession subSession
  payments payments [not null]
  teamId String[] [not null]
  teams teams [not null]
  survey Survey
}

Enum UserTypeEnum {
  ADMIN
  FOUNDER
  USER
  STAFF
}

Enum PaymentStatusEnum {
  SUCCESS
  FAILED
  REFUND
  CANCELLED
  PENDING
}

Enum Rating {
  TERRIBLE
  BAD
  OKAY
  GOOD
  GREAT
}

Enum Gender {
  MALE
  FEMALE
}

Enum SesssionType {
  OPENPLAY
  TRAINING
  TOURNAMENT
}

Enum RecordStatus {
  DELETED
  ACTIVE
}

Enum Marketing {
  FACEBOOK
  TIKTOK
  INSTAGRAM
}

Enum ChannelType {
  BANK
  EWALLET
}

Ref: Clubs.founderId > users.id

Ref: Survey.userId - users.id

Ref: payments.subSessionId > subSession.id

Ref: payments.email > users.email

Ref: subSession.sessionId > sessions.id

Ref: teams.subSessionId > subSession.id

Ref: teams.players > users.id

Ref: rates.subSessionId > subSession.id

Ref: users.joinedLobbyId > subSession.id

Ref: users.teamId > teams.id